Basic Bootstrap Components.

--- a/images.html
+++ b/images.html
@@ -5,14 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <title>Tables</title>
+    <title>Images</title>
 </head>
+<style>
+    label{
+        padding-left: 20px;
+    }
+</style>
 <body>
-    <hr />
-    <center>
-    <nav style="background: lightblue;"><a href="index.html"><button class="btn btn-primary">Index Page</button></a></nav>
-    </center>
-    <hr />
+        <div style="background-color: lightblue;">
+            <hr />
+            <center>
+                <nav><a href="index.html"><button class="btn btn-primary">Index Page</button></a></nav>
+            </center>
+            <hr />
+        </div>
+
+        <label>Let's look at rounded corners on images.</label>
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.acidcow.com%2Fpics%2F20180125%2Fmedieval_memes_11.jpg&f=1&nofb=1" height="300px" width="300px" class="img-rounded" alt="Meme 1">
+
+        <hr />
+
+        <label>Let's look at some circled images.</label>
+        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fpuppytoob.com%2Fwp-content%2Fuploads%2F2013%2F04%2FDog_Meme_1.jpg&f=1&nofb=1" height="300px" width="300px" class="img-circle" alt="Meme 2">
+
+        <hr />
+
+        <label>Now, these are thumbnails.</label>
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fres.cloudinary.com%2Fteepublic%2Fimage%2Fprivate%2Fs--xTBvw7tq--%2Fb_rgb%3Afffffe%2Ct_Heather%2520Preview%2Fc_limit%2Cf_jpg%2Ch_630%2Cq_90%2Cw_630%2Fv1446170034%2Fproduction%2Fdesigns%2F87205_1.jpg&f=1&nofb=1" height="300px" width="300px" class="img-thumbnail" alt="Meme 3">
+
+        <hr />
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
