--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <title>Brillio Training</title>
 </head>
-<body>
-    
-    <div class="list-group">
-        <a href="tables.html" class="list-group-item">Tables</a>
-        <a href="images.html" class="list-group-item">Images</a>
-        <a href="wells.html" class="list-group-item">Wells</a>
+<body style="text-align: center; margin-top: 2%; background-color: lightblue;">
+
+    <h2></h2>
+    <div class="container">
+        <div class="list-group">
+            <a href="tables.html" class="list-group-item">Tables</a>
+            <a href="images.html" class="list-group-item">Images</a>
+            <a href="wells.html" class="list-group-item">Wells</a>
+            <a href="alerts.html" class="list-group-item">Alerts</a>
+            <a href="buttons.html" class="list-group-item">Buttons and Button Groups</a>
+            <a href="wells.html" class="list-group-item">List Groups</a>
+            <a href="alerts.html" class="list-group-item">Pagination</a>
+            <a href="buttons.html" class="list-group-item">Pager</a>
+        </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
