--- a/alerts.html
+++ b/alerts.html
@@ -5,14 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <title>Tables</title>
+    <title>Alerts</title>
 </head>
 <body>
-    <hr />
-    <center>
-    <nav style="background: lightblue;"><a href="index.html"><button class="btn btn-primary">Index Page</button></a></nav>
-    </center>
-    <hr />
+        <div style="background-color: lightblue;">
+            <hr />
+            <center>
+                <nav><a href="index.html"><button class="btn btn-primary">Index Page</button></a></nav>
+            </center>
+            <hr />
+        </div>
+
+            <div class="alert alert-success">
+                <strong>Success!</strong> Indicates a successful or positive action.
+            </div>
+
+            <div class="alert alert-info">
+                <strong>Info!</strong> Indicates a neutral informative change or action.
+            </div>
+            
+            <div class="alert alert-warning">
+                <strong>Warning!</strong> Indicates a warning that might need attention.
+            </div>
+            
+            <div class="alert alert-danger">
+                <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
+            </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
