--- a/buttons.html
+++ b/buttons.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <title>Wells</title>
+    <title>Buttons</title>
 </head>
 <body>
         <div style="background-color: lightblue;">
@@ -15,15 +15,17 @@
             </center>
             <hr />
         </div>
-            <h3> Wells are nothing but contents with rounded corners. We have 3 different sizes of wells.</h3>
-            <hr />
 
-            <div class="container">
-            <h4>Wells and sizes. These wells are in a container div.</h4>
-            <div class="well well-sm">Small Well</div>
-            <div class="well">Normal Well</div>
-            <div class="well well-lg">Large Well</div>
-            </div>
+        <div class="container">
+        <button type="button" class="btn">Basic</button> <hr />
+        <button type="button" class="btn btn-default">Default</button> <hr />
+        <button type="button" class="btn btn-primary">Primary</button> <hr />
+        <button type="button" class="btn btn-success">Success</button> <hr />
+        <button type="button" class="btn btn-info">Info</button> <hr />
+        <button type="button" class="btn btn-warning">Warning</button> <hr />
+        <button type="button" class="btn btn-danger">Danger</button> <hr />
+        <button type="button" class="btn btn-link">Link</button> <hr />
+        </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
