--- a/Bootstrap v3 Basic Components/pagination.html
+++ b/Bootstrap v3 Basic Components/pagination.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <title>Buttons</title>
+    <title>Pagination</title>
 </head>
 <body>
         <div style="background-color: lightblue;">
@@ -16,16 +16,23 @@
             <hr />
         </div>
 
-        <div class="container">
-        <button type="button" class="btn">Basic</button> <hr />
-        <button type="button" class="btn btn-default">Default</button> <hr />
-        <button type="button" class="btn btn-primary">Primary</button> <hr />
-        <button type="button" class="btn btn-success">Success</button> <hr />
-        <button type="button" class="btn btn-info">Info</button> <hr />
-        <button type="button" class="btn btn-warning">Warning</button> <hr />
-        <button type="button" class="btn btn-danger">Danger</button> <hr />
-        <button type="button" class="btn btn-link">Link</button> <hr />
+        <ul class="pagination pagination-lg">
+            <li><a href="#">1</a></li>
+            <li class="active"><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li class="disabled"><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+        </ul>
+
+        <hr />
+        <div class="container well well-sm">
+            using the class "disabled" disables the button, or the control. Using the class "active" marks the respective button or control as active.
+            giving a unordered list a class called "pagination" creates a pagination.
+            sizes are same as button-groups, but this has only small(sm) and large(lg).
+
+            The shown pagination is large.
         </div>
+        <hr />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
