--- a/Bootstrap v3 Basic Components/collapses.html
+++ b/Bootstrap v3 Basic Components/collapses.html
@@ -86,3 +86,39 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+<!-- <div class="container">
+    <nav style="margin-top: 2rem;" class="navbar">
+        <div class="container-fluid" style="display: inline">
+        <div style="background-color: greenyellow; padding-left: 1rem;" class="navbar-header">
+            <a class="navbar-brand" href="#"><i class="fa fa-bars"></i> SHOP BY CATEGORY</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li><a href="#">HOME</a></li>
+            <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">CATEGORIES
+                <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><a href="#">Page 1-1</a></li>
+                <li><a href="#">Page 1-2</a></li>
+                <li><a href="#">Page 1-3</a></li>
+            </ul>
+            </li>
+            <li><a href="#">PRODUCTS</a></li>
+            <li><a href="#">HEALTH</a></li>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">GALLERY</a></li>
+            <li><a href="#">VIDEOS</a></li>
+            <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
+                <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><a href="#">Page 1-1</a></li>
+                <li><a href="#">Page 1-2</a></li>
+                <li><a href="#">Page 1-3</a></li>
+            </ul>
+            </li>
+        </ul>
+        </div>
+    </nav>
+</div> -->
