--- a/Assignment 1/bootstrap_page_1.html
+++ b/Assignment 1/bootstrap_page_1.html
@@ -20,7 +20,11 @@
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Company</a></li>
             </ul>
-            <button style="float: right;" class="btn btn-danger navbar-btn">Sign Up</button>
+            <button style="float: right;" class="btn btn-danger navbar-btn">
+                <a href="registerPage.html" style="text-decoration: none; color: white">
+                    Sign Up
+                </a>
+            </button>
         </div>
     </nav>
 
