--- a/Assignment 1/registerPage.html
+++ b/Assignment 1/registerPage.html
@@ -4,21 +4,101 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <title>Register Page</title>
+    <title>Register</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
+
+<style>
+    .signin{
+    margin-top: 10rem;
+    width: 410px;
+    padding-top: 1pt;
+    background-color: rgb(68, 68, 97);
+    }
+    .register{
+        width: 400px;
+        margin-top: 5px;
+        background-color: lightgray;
+    }
+
+    hr{
+        width: 100px;
+        margin-top: 2rem;
+        background-color: black;
+    }
+    hr,h1{
+        display: inline-block;
+        
+    }
+
+    #fname, #lname{
+        margin-top: 1rem;
+        display: inline;
+        width: 170px;
+    }
+    #lname{
+        margin-left: 10px;
+    }
+
+    #email, #passwd, #cpasswd{
+        width: 350px;
+    }
+    .signin-atag{
+        color: white;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    #checkbx, #tc{
+        display: inline;
+    }
+    span{
+        color: rgb(33, 141, 33);
+    }
+    #reg-btn{
+        margin-top: 2rem;
+        width: 350px;
+        margin-bottom: 4rem;
+    }
+
+    a{
+        color: white;
+    }
+</style>
+
 <body>
-        <div style="background-color: lightblue;">
-            <hr />
-            <center>
-                <nav><a href="index.html"><button class="btn btn-primary">Index Page</button></a></nav>
-            </center>
-            <hr />
+    <center>
+        <div class="signin">
+            <div class="register">
+                <hr>
+                <h1 style="padding-top: 3rem; padding-left: 2rem; padding-right: 2rem;">Register</h1>
+                <hr>
+                <h5 style="padding-bottom: 1rem;">Create your account. it's free and only takes a minute</h5>
+                <form action="">
+                    <input class="form-control" type="text" name="" id="fname" placeholder="First Name">
+                    <input class="form-control" type="text" name="" id="lname" placeholder="Last Name">
+                    <br>
+                    <br>
+                    <input class="form-control" type="text" name="" id="email" placeholder="Email">
+                    <br>
+                    <input class="form-control" type="text" name="" id="passwd" placeholder="Password">
+                    <br>
+                    <input class="form-control" type="text" name="" id="cpasswd" placeholder="Confirm Password">
+                    <br>
+                    <input type="checkbox" name="" id="checkbx">
+                    <p id="tc">I accept the <span>Terms of Use</span> & <span>Privacy Policy</span> </p>
+                    <br>
+                    <input class="btn btn-success" type="button" value="Register Now" id="reg-btn">
+                </form>
+            </div>
+            <div class="signin-atag">Already have an account? <a href="#"><u>Sign in</u></a> </div>
         </div>
+    </center>
 
-        <!-- Insert component code here -->
 
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </body>
+
 </html>
