--- a/jsoncrud/public/index.html
+++ b/jsoncrud/public/index.html
@@ -15,8 +15,8 @@
     <div class="container" style="background-color: lightgrey;margin-top:5%; padding:5% ;text-align:center; border:1px solid black">
         <button class="btn btn-primary" onclick="addDept()">Create Department</button><br /><br />
         <button class="btn btn-success" onclick="getDept()">Retrieve Department</button><br /><br />
-        <button class="btn btn-dark">Update Department</button><br /><br />
-        <button class="btn btn-warning">Delete Department</button><br /><br />          
+        <button class="btn btn-dark" onclick="updateDept()">Update Department</button><br /><br />
+        <button class="btn btn-warning" onclick="deleteDept()">Delete Department</button><br /><br />        
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
